--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="icon" href="/favicon.ico">
-  <title>Winterman App</title>
+  <link rel="icon" href="/icon.svg">
+  <title>Winterman</title>
 </head>
 
 <body>
